; ModuleID = '/home/carl/AnghaBench/php-src/ext/gd/libgd/extr_gd_wbmp.c_gdImageWBMPPtr.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/gd/libgd/extr_gd_wbmp.c_gdImageWBMPPtr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32 (%struct.TYPE_6__*)* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @gdImageWBMPPtr(i32 %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca %struct.TYPE_6__*, align 8
  store i32 %0, i32* %4, align 4
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %9 = call %struct.TYPE_6__* @gdNewDynamicCtx(i32 2048, i32* null)
  store %struct.TYPE_6__* %9, %struct.TYPE_6__** %8, align 8
  %10 = load i32, i32* %4, align 4
  %11 = load i32, i32* %6, align 4
  %12 = load %struct.TYPE_6__*, %struct.TYPE_6__** %8, align 8
  %13 = call i32 @_gdImageWBMPCtx(i32 %10, i32 %11, %struct.TYPE_6__* %12)
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %19, label %15

15:                                               ; preds = %3
  %16 = load %struct.TYPE_6__*, %struct.TYPE_6__** %8, align 8
  %17 = load i32*, i32** %5, align 8
  %18 = call i8* @gdDPExtractData(%struct.TYPE_6__* %16, i32* %17)
  store i8* %18, i8** %7, align 8
  br label %20

19:                                               ; preds = %3
  store i8* null, i8** %7, align 8
  br label %20

20:                                               ; preds = %19, %15
  %21 = load %struct.TYPE_6__*, %struct.TYPE_6__** %8, align 8
  %22 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %21, i32 0, i32 0
  %23 = load i32 (%struct.TYPE_6__*)*, i32 (%struct.TYPE_6__*)** %22, align 8
  %24 = load %struct.TYPE_6__*, %struct.TYPE_6__** %8, align 8
  %25 = call i32 %23(%struct.TYPE_6__* %24)
  %26 = load i8*, i8** %7, align 8
  ret i8* %26
}

declare dso_local %struct.TYPE_6__* @gdNewDynamicCtx(i32, i32*) #1

declare dso_local i32 @_gdImageWBMPCtx(i32, i32, %struct.TYPE_6__*) #1

declare dso_local i8* @gdDPExtractData(%struct.TYPE_6__*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
